- Added depth parameter to json_decode() to lower the nesting depth from the
  maximum if required. (Scott)
- Added ICU support to SQLite3 when using the bundled version. (Scott)

- Re-added socket_create_pair() for Windows in sockets extension. (Kalle)

- Fixed building of pdo_sqlite without sqlite3. (Scott)

- Fixed bug #47050 (mysqli_poll() modifies improper variables). (Johannes)
- Fixed bug #46979 (use with non-compound name *has* effect). (Dmitry)
- Fixed bug #46957 (The tokenizer returns deprecated values). (Felipe)
- Fixed bug #46944 (UTF-8 characters outside the BMP aren't encoded correctly).
  (Scott)
- Fixed bug #46849 (Cloning DOMDocument doesn't clone the properties). (Rob)
- Fixed bug #46847 (phpinfo() is missing some settings). (Hannes)
- Fixed bug #46844 (php scripts or included files with first line starting
  with # have the 1st line missed from the output). (Ilia)
- Fixed bug #46811 (ini_set() doesn't return false on failure). (Hannes)
- Fixed bug #46763 (mb_stristr() wrong output when needle does not exist).
  (Henrique M. Decaria)
- Fixed bug #46755 (warning: use statement with non-compound name). (Dmitry)
- Fixed bug #46746 (xmlrpc_decode_request outputs non-suppressable error when
  given bad data). (Ilia)
- Fixed bug #46738 (Segfault when mb_detect_encoding() fails). (Scott)
- Fixed bug #46681 (mkdir() fails silently on PHP 5.3). (Hannes)
- Fixed bug #46653 (can't extend mysqli). (Johannes)
- Fixed bug #46646 (Restrict serialization on some internal classes like
  Closure and SplFileInfo using exceptions). (Etienne)
- Fixed bug #46268 (DateTime::modify() does not reset relative time values).
  (Derick)
- Fixed bug #46044 (Mysqli - wrong error message). (Johannes)
- Fixed bug #45991 (Ini files with the UTF-8 BOM are treated as invalid).
  (Scott)
- Fixed bug #45989 (json_decode() doesn't return NULL on certain invalid
  strings). (magicaltux, Scott)
- Fixed bug #45940 (MySQLI OO does not populate connect_error property on